# Scant

./: .dockerignore  .gitignore  dockerfile  pyproject.toml  readme.md
.github/workflows/: deploy.yml
infrastructure/: authentication.tf  backend.tf  permissions.tf  repository.tf  scanner.tf  variables.tf  watermarking.tf
scant/: authentication.py  constants.py  infrastructure.py  job_listing.py  lambda_function.py  scanner.py  self_inspector.py  slack.py  watermark.py
scripts/deploy/: Publish-Package.ps1
