[tool.poetry]
authors = ["Jeremy Fortune <jeremytwfortune@gmail.com>"]
description = ""
name = "scant"
readme = "readme.md"
version = "0.1.0"

[tool.poetry.dependencies]
playwright = "^1.43.0"
python = "^3.12"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
boto3 = "^1.34.95"
ipykernel = "^6.29.4"
mypy = "^1.10.0"
types-boto3 = "^1.0.2"
types-requests = "^2.31.0.20240406"

[tool.poetry.group.deploy.dependencies]
awslambdaric = "^2.0.11"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 120
